@@ -1,11 +1,11 @@
 {
     "name": "SpidertronEnhancements",
-    "version": "1.4.10",
+    "version": "1.4.11",
     "title": "Spidertron Enhancements",
     "author": "Xorimuth",
     "description": "Some simple features to make your life easier whilst using a spidertron:\n - Enter a vehicle without leaving your spidertron\n - Quickly toggle between engineer and spidertron\n - Use spidertron remote pathfinder to navigate around lakes\n - Automatically sort spidertron inventories\n - Pipette remotes from inventory by hovering over spidertrons\n - Directly open the inventory of a vehicle that you are currently driving",
     "factorio_version": "1.1",
-    "dependencies": ["base >= 1.1.7", "? simhelper >= 1.1.1", "? SpidertronWaypoints >= 1.7.2", "(?) SpidertronWeaponSwitcher >= 1.2.2"],
+    "dependencies": ["base >= 1.1.7", "? simhelper >= 1.1.1", "? SpidertronWaypoints >= 1.7.2", "(?) SpidertronWeaponSwitcher >= 1.2.2", "(?) spidertron-grid"],
     "package": {
       "ignore": ["resources/*", "scenarios/*"]
     }
